--- a/.github/workflows/scrape-liquidations.yml
+++ b/.github/workflows/scrape-liquidations.yml
@@ -1,8 +1,12 @@
+# .github/workflows/scrape-liquidations.yml
 name: Scrape CoinGlass Total Liquidations
 
 on:
+  push:
+    branches: [ main ]                   # triggers on pushes to main :contentReference[oaicite:1]{index=1}
+  workflow_dispatch:                     # allows manual runs via the UI :contentReference[oaicite:2]{index=2}
   schedule:
-    - cron: '*/15 * * * *'  # every 15 minutes :contentReference[oaicite:6]{index=6}
+    - cron: '*/15 * * * *'               # every 15 minutes UTC :contentReference[oaicite:3]{index=3}
 
 permissions:
   contents: write
@@ -13,19 +17,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          persist-credentials: false     # so pushes use the bot token :contentReference[oaicite:4]{index=4}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: Install Puppeteer
-        run: npm install puppeteer
+      - name: Install dependencies
+        run: npm install puppeteer       # Puppeteer for headless scraping :contentReference[oaicite:5]{index=5}
 
       - name: Run scraper
         run: node scrape.js
-        continue-on-error: true  # so workflow doesn’t fail completely on scraper error
+        continue-on-error: true           # log errors but don’t block future runs
 
       - name: Commit results
         run: |
