--- a/.github/workflows/scrape-liquidations.yml
+++ b/.github/workflows/scrape-liquidations.yml
@@ -1,36 +1,33 @@
 # .github/workflows/scrape-liquidations.yml
-name: Scrape CoinGlass Total Liquidations
-
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
   schedule:
-    - cron: '*/15 * * * *'   # every 15 minutes UTC
-
-permissions:
-  contents: write
+    - cron: '*/15 * * * *'    # every 15 min UTC
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
 
-      - name: Setup Node.js
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci           # reads package.json & installs puppeteer
+        run: npm install
 
       - name: Run scraper
         run: npm run scrape
+        continue-on-error: true
 
-      - name: Commit results
+      - name: Commit and push new data
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -39,3 +36,6 @@ jobs:
             git commit -m "chore: update total liquidations"
             git push
           fi
+
+    permissions:
+      contents: write
